--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <h3>Điều kiện bắt buộc</h3>
     <ul>
       <li>Ứng dụng phải còn tồn tại trên App Store</li>
-      <li>Đã tải ứng dụng về Apple ID để có Lisence</li>
+      <li>Đã tải ứng dụng về Apple ID để có License</li>
       <li>Phải có appVerId (sẽ hướng dẫn ở Bước 03)</li>
       <li>Sử dụng trên Windows</li>
     </ul>
